// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddGroupMembers /> should render correctly 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-3"
          aria-labelledby="pf-modal-part-2"
          aria-modal="true"
          class="pf-c-modal-box pf-m-md"
          data-ouia-component-id="OUIA-Generated-Modal-medium-2"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-1"
          role="dialog"
        >
          <button
            aria-disabled="false"
            aria-label="Close"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-medium-2-ModalBoxCloseButton"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
          <header
            class="pf-c-modal-box__header"
          >
            <h1
              class="pf-c-modal-box__title"
              id="pf-modal-part-2"
            >
              
              <span
                class="pf-c-modal-box__title-text"
              >
                Add members
              </span>
            </h1>
          </header>
          <div
            class="pf-c-modal-box__body"
            id="pf-modal-part-3"
          >
            <div
              class="pf-l-stack pf-m-gutter"
            >
              <div
                class="pf-l-stack__item"
              >
                <div
                  class="pf-c-content"
                >
                  <p
                    class="pf-u-mt-0"
                    data-ouia-component-id="OUIA-Generated-Text-2"
                    data-ouia-component-type="PF4/Text"
                    data-ouia-safe="true"
                    data-pf-content="true"
                  >
                    These are all of the users in your Red Hat organization. 
                  </p>
                </div>
              </div>
              <div
                class="pf-l-stack__item"
              >
                <div
                  class="pf-c-toolbar  ins-c-primary-toolbar"
                  data-ouia-component-id="PrimaryToolbar"
                  data-ouia-component-type="PF4/Toolbar"
                  data-ouia-safe="true"
                  id="ins-primary-data-toolbar"
                >
                  <div
                    class="pf-c-toolbar__content"
                  >
                    <div
                      class="pf-c-toolbar__content-section"
                    >
                      <div
                        class="pf-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
                      >
                        <div
                          class="pf-c-toolbar__item"
                        >
                          <div
                            class="pf-c-dropdown ins-c-bulk-select"
                            data-ouia-component-id="BulkSelect"
                            data-ouia-component-type="PF4/Dropdown"
                            data-ouia-safe="true"
                          >
                            <div
                              class="pf-c-dropdown__toggle pf-m-split-button"
                            >
                              <label
                                class="pf-c-dropdown__toggle-check"
                                for="users-list-toggle-checkbox"
                              >
                                <input
                                  aria-invalid="false"
                                  aria-label="Select all"
                                  data-ouia-component-id="BulkSelect"
                                  data-ouia-component-type="PF4/DropdownToggleCheckbox"
                                  data-ouia-safe="true"
                                  id="users-list-toggle-checkbox"
                                  type="checkbox"
                                />
                                
                              </label>
                              <button
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="Select"
                                class="pf-c-dropdown__toggle-button"
                                data-ouia-component-id="BulkSelect"
                                data-ouia-component-type="PF4/DropdownToggle"
                                data-ouia-safe="true"
                                id="pf-dropdown-toggle-id-12"
                                type="button"
                              >
                                <span
                                  class=""
                                >
                                  <svg
                                    aria-hidden="true"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style="vertical-align: -0.125em;"
                                    viewBox="0 0 320 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="pf-c-toolbar__item ins-c-primary-toolbar__filter"
                        >
                          <div
                            class="pf-l-split ins-c-conditional-filter desktop"
                          >
                            <div
                              class="pf-l-split__item"
                            >
                              <div
                                class="pf-c-dropdown ins-c-conditional-filter__group"
                                data-ouia-component-id="ConditionalFilter"
                                data-ouia-component-type="PF4/Dropdown"
                                data-ouia-safe="true"
                              >
                                <button
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  aria-label="Conditional filter"
                                  class="pf-c-dropdown__toggle"
                                  data-ouia-component-id="ConditionalFilter"
                                  data-ouia-component-type="PF4/DropdownToggle"
                                  data-ouia-safe="true"
                                  id="pf-dropdown-toggle-id-13"
                                  type="button"
                                >
                                  <span
                                    class="pf-c-dropdown__toggle-text"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style="vertical-align: -0.125em;"
                                      viewBox="0 0 512 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                                      />
                                    </svg>
                                    <span
                                      class="ins-c-conditional-filter__value-selector"
                                    >
                                      Username
                                    </span>
                                  </span>
                                  <span
                                    class="pf-c-dropdown__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style="vertical-align: -0.125em;"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </div>
                            </div>
                            <div
                              class="pf-l-split__item pf-m-fill"
                            >
                              <input
                                aria-invalid="false"
                                aria-label="text input"
                                class="pf-c-form-control ins-c-conditional-filter "
                                data-ouia-component-id="ConditionalFilter"
                                data-ouia-component-type="PF4/TextInput"
                                data-ouia-safe="true"
                                id="filter-by-username"
                                placeholder="Filter by {key}"
                                type="text"
                                value=""
                                widget-type="InsightsInput"
                              />
                              <svg
                                aria-hidden="true"
                                class="ins-c-search-icon"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style="vertical-align: -0.125em;"
                                viewBox="0 0 512 512"
                                width="1em"
                              >
                                <path
                                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="pf-c-toolbar__item ins-c-primary-toolbar__pagination"
                      >
                        <div
                          class="pf-c-pagination pf-m-compact"
                          count="1"
                          data-ouia-component-id="CompactPagination"
                          data-ouia-component-type="PF4/Pagination"
                          data-ouia-safe="true"
                          id="options-menu-top-pagination"
                          limit="20"
                          style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
                        >
                          <div
                            class="pf-c-pagination__total-items"
                          >
                            <b>
                              1
                               - 
                              1
                            </b>
                             
                            of
                             
                            <b>
                              1
                            </b>
                             
                            
                          </div>
                          <div
                            class="pf-c-options-menu"
                            data-ouia-component-type="PF4/PaginationOptionsMenu"
                            data-ouia-safe="true"
                          >
                            <div
                              class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
                            >
                              <span
                                class="pf-c-options-menu__toggle-text"
                              >
                                <b>
                                  1
                                   - 
                                  1
                                </b>
                                 
                                of
                                 
                                <b>
                                  1
                                </b>
                                 
                                
                              </span>
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-label="Items per page"
                                class="  pf-c-options-menu__toggle-button"
                                data-ouia-component-id="OUIA-Generated-DropdownToggle-7"
                                data-ouia-component-type="PF4/DropdownToggle"
                                data-ouia-safe="true"
                                id="options-menu-top-toggle"
                                type="button"
                              >
                                <span
                                  class="pf-c-options-menu__toggle-button-icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style="vertical-align: -0.125em;"
                                    viewBox="0 0 320 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </div>
                          <nav
                            aria-label="Pagination"
                            class="pf-c-pagination__nav"
                          >
                            <div
                              class="pf-c-pagination__nav-control"
                            >
                              <button
                                aria-disabled="true"
                                aria-label="Go to previous page"
                                class="pf-c-button pf-m-plain pf-m-disabled"
                                data-action="previous"
                                data-ouia-component-id="OUIA-Generated-Button-plain-10"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe="true"
                                disabled=""
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style="vertical-align: -0.125em;"
                                  viewBox="0 0 256 512"
                                  width="1em"
                                >
                                  <path
                                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                  />
                                </svg>
                              </button>
                            </div>
                            <div
                              class="pf-c-pagination__nav-control"
                            >
                              <button
                                aria-disabled="true"
                                aria-label="Go to next page"
                                class="pf-c-button pf-m-plain pf-m-disabled"
                                data-action="next"
                                data-ouia-component-id="OUIA-Generated-Button-plain-11"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe="true"
                                disabled=""
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style="vertical-align: -0.125em;"
                                  viewBox="0 0 256 512"
                                  width="1em"
                                >
                                  <path
                                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </nav>
                        </div>
                      </div>
                    </div>
                    <div
                      class="pf-c-toolbar__expandable-content"
                      id="ins-primary-data-toolbar-expandable-content-6"
                    >
                      <div
                        class="pf-c-toolbar__group"
                      />
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__content"
                  >
                    <div
                      class="pf-c-toolbar__content-section"
                    >
                      <div
                        class="pf-c-toolbar__item"
                      >
                        <span
                          class="ins-c-chip-filters"
                        >
                          <div
                            aria-labelledby="pf-random-id-3"
                            class="pf-c-chip-group pf-m-category"
                            data-ouia-component-type="PF4/ChipGroup"
                            data-ouia-safe="true"
                            role="group"
                          >
                            <div
                              class="pf-c-chip-group__main"
                            >
                              <span
                                class="pf-c-chip-group__label"
                                id="pf-random-id-3"
                              >
                                Status
                              </span>
                              <ul
                                aria-labelledby="pf-random-id-3"
                                class="pf-c-chip-group__list"
                                role="list"
                              >
                                <li
                                  class="pf-c-chip-group__list-item"
                                >
                                  <div
                                    class="pf-c-chip"
                                    data-ouia-component-id="OUIA-Generated-Chip-2"
                                    data-ouia-component-type="PF4/Chip"
                                    data-ouia-safe="true"
                                  >
                                    <span
                                      class="pf-c-chip__text"
                                      id="pf-random-id-4"
                                    >
                                      Active
                                    </span>
                                    <button
                                      aria-disabled="false"
                                      aria-label="close"
                                      aria-labelledby="remove_pf-random-id-4 pf-random-id-4"
                                      class="pf-c-button pf-m-plain"
                                      data-ouia-component-id="close"
                                      data-ouia-component-type="PF4/Button"
                                      data-ouia-safe="true"
                                      id="remove_pf-random-id-4"
                                      type="button"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: -0.125em;"
                                        viewBox="0 0 352 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                        />
                                      </svg>
                                    </button>
                                  </div>
                                </li>
                              </ul>
                            </div>
                          </div>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="ClearFilters"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Clear filters
                          </button>
                        </span>
                      </div>
                    </div>
                    <div
                      class="pf-c-toolbar__expandable-content"
                      id="ins-primary-data-toolbar-expandable-content-7"
                    >
                      <div
                        class="pf-c-toolbar__group"
                      />
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__content pf-m-hidden"
                    hidden=""
                  >
                    <div
                      class="pf-c-toolbar__group"
                    />
                  </div>
                </div>
                <table
                  aria-label="users table"
                  class="pf-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
                  data-ouia-component-id="users-table"
                  data-ouia-component-type="PF4/Table"
                  data-ouia-safe="true"
                  role="grid"
                >
                  <thead
                    class=""
                  >
                    <tr
                      class=""
                      data-ouia-component-id="OUIA-Generated-TableRow-3"
                      data-ouia-component-type="PF4/TableRow"
                      data-ouia-safe="true"
                    >
                      <th
                        class=""
                        data-key="0"
                        data-label=""
                      />
                      <th
                        class="pf-m-nowrap"
                        data-key="1"
                        data-label="Org. Admin"
                        scope="col"
                      >
                        Org. Admin
                      </th>
                      <th
                        aria-sort="none"
                        class="pf-c-table__sort"
                        data-key="2"
                        data-label="Username"
                        scope="col"
                      >
                        <button
                          class="pf-c-table__button"
                          type="button"
                        >
                          <div
                            class="pf-c-table__button-content"
                          >
                            <span
                              class="pf-c-table__text"
                            >
                              Username
                            </span>
                            <span
                              class="pf-c-table__sort-indicator"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style="vertical-align: -0.125em;"
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                                />
                              </svg>
                            </span>
                          </div>
                        </button>
                      </th>
                      <th
                        class=""
                        data-key="3"
                        data-label="Email"
                        scope="col"
                      >
                        Email
                      </th>
                      <th
                        class="pf-m-nowrap"
                        data-key="4"
                        data-label="First name"
                        scope="col"
                      >
                        First name
                      </th>
                      <th
                        class="pf-m-nowrap"
                        data-key="5"
                        data-label="Last name"
                        scope="col"
                      >
                        Last name
                      </th>
                      <th
                        class="pf-m-nowrap"
                        data-key="6"
                        data-label="Status"
                        scope="col"
                      >
                        Status
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class=""
                    role="rowgroup"
                  >
                    <tr
                      class="rbac__user-row"
                      data-ouia-component-id="OUIA-Generated-TableRow-4"
                      data-ouia-component-type="PF4/TableRow"
                      data-ouia-safe="true"
                    >
                      <td
                        class="pf-c-table__check"
                        data-key="0"
                      >
                        <label>
                          <input
                            aria-label="Select row 0"
                            name="checkrow0"
                            type="checkbox"
                          />
                        </label>
                      </td>
                      <td
                        class=""
                        data-key="1"
                        data-label="Org. Admin"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-u-mr-sm"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 730 1024"
                          width="1em"
                        >
                          <path
                            d="M725.499315,767.757345 L469.242169,511.500499 L725.499315,255.243653 C729.196254,251.545719 731.096195,247.248119 731,242.4498 C731,237.653479 728.997365,233.35588 725.299427,229.558002 L647.542773,151.701495 C643.743891,147.903617 639.446287,146 634.64996,146 C629.852635,146 625.55503,147.803673 621.857092,151.500607 L365.5,407.857398 L109.241857,151.500607 C105.544917,147.803673 101.246314,145.904733 96.4499876,146 C91.6526619,146.104622 87.3550577,148.002562 83.5571748,151.701495 L5.7005771,229.457058 C1.90269428,233.255936 0,237.553535 0,242.350855 C0,247.148175 1.80175055,251.444775 5.50068853,255.143709 L261.857779,511.500499 L5.50068853,767.757345 C1.80175055,771.454279 -0.0961914123,775.752878 0,779.750645 C0.103697157,784.547965 2.00263857,788.845564 5.7005771,792.642443 L83.4572306,871.299502 C87.2541139,875.096381 91.5527176,877 96.3500433,877 C101.147369,877 105.444973,875.197325 109.142912,871.499391 L365.400058,615.241545 L621.657203,871.499391 C625.355142,875.197325 629.652746,877.095265 634.449072,877 C639.246398,877 643.545002,874.997437 647.342885,871.299502 L725.099538,793.54294 C728.896421,789.745062 730.796362,785.446463 730.796362,780.649143 C731.096195,775.752878 729.196254,771.454279 725.499315,767.757345"
                          />
                        </svg>
                        <span>
                          No
                        </span>
                      </td>
                      <td
                        class=""
                        data-key="2"
                        data-label="Username"
                      >
                        test_name
                      </td>
                      <td
                        class=""
                        data-key="3"
                        data-label="Email"
                      >
                        testmail@redhat.com
                      </td>
                      <td
                        class=""
                        data-key="4"
                        data-label="First name"
                      >
                        test
                      </td>
                      <td
                        class=""
                        data-key="5"
                        data-label="Last name"
                      >
                        test
                      </td>
                      <td
                        class=""
                        data-is-active="true"
                        data-key="6"
                        data-label="Status"
                      >
                        <span
                          class="pf-c-label pf-m-green"
                        >
                          <span
                            class="pf-c-label__content"
                          >
                            Active
                          </span>
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <div
                  class="pf-c-toolbar ins-c-table__toolbar"
                  data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-2"
                  data-ouia-component-type="RHI/TableToolbar"
                  data-ouia-safe="true"
                  id="pf-random-id-5"
                >
                  <div
                    class="pf-c-pagination pf-m-bottom"
                    count="1"
                    data-ouia-component-id="OUIA-Generated-Pagination-bottom-2"
                    data-ouia-component-type="PF4/Pagination"
                    data-ouia-safe="true"
                    id="options-menu-bottom-pagination"
                    limit="20"
                    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
                  >
                    <div
                      class="pf-c-options-menu pf-m-top"
                      data-ouia-component-type="PF4/PaginationOptionsMenu"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
                      >
                        <span
                          class="pf-c-options-menu__toggle-text"
                        >
                          <b>
                            1
                             - 
                            1
                          </b>
                           
                          of
                           
                          <b>
                            1
                          </b>
                           
                          
                        </span>
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-label="Items per page"
                          class="  pf-c-options-menu__toggle-button"
                          data-ouia-component-id="OUIA-Generated-DropdownToggle-8"
                          data-ouia-component-type="PF4/DropdownToggle"
                          data-ouia-safe="true"
                          id="options-menu-bottom-toggle"
                          type="button"
                        >
                          <span
                            class="pf-c-options-menu__toggle-button-icon"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 320 512"
                              width="1em"
                            >
                              <path
                                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                    <nav
                      aria-label="Pagination"
                      class="pf-c-pagination__nav"
                    >
                      <div
                        class="pf-c-pagination__nav-control pf-m-first"
                      >
                        <button
                          aria-disabled="true"
                          aria-label="Go to first page"
                          class="pf-c-button pf-m-plain pf-m-disabled"
                          data-action="first"
                          data-ouia-component-id="OUIA-Generated-Button-plain-13"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 448 512"
                            width="1em"
                          >
                            <path
                              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="pf-c-pagination__nav-control"
                      >
                        <button
                          aria-disabled="true"
                          aria-label="Go to previous page"
                          class="pf-c-button pf-m-plain pf-m-disabled"
                          data-action="previous"
                          data-ouia-component-id="OUIA-Generated-Button-plain-14"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="pf-c-pagination__nav-page-select"
                      >
                        <input
                          aria-label="Current page"
                          class="pf-c-form-control"
                          disabled=""
                          max="1"
                          min="1"
                          type="number"
                          value="1"
                        />
                        <span
                          aria-hidden="true"
                        >
                          of
                           
                          1
                        </span>
                      </div>
                      <div
                        class="pf-c-pagination__nav-control"
                      >
                        <button
                          aria-disabled="true"
                          aria-label="Go to next page"
                          class="pf-c-button pf-m-plain pf-m-disabled"
                          data-action="next"
                          data-ouia-component-id="OUIA-Generated-Button-plain-15"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="pf-c-pagination__nav-control pf-m-last"
                      >
                        <button
                          aria-disabled="true"
                          aria-label="Go to last page"
                          class="pf-c-button pf-m-plain pf-m-disabled"
                          data-action="last"
                          data-ouia-component-id="OUIA-Generated-Button-plain-16"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 448 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                            />
                          </svg>
                        </button>
                      </div>
                    </nav>
                  </div>
                  <div
                    class="pf-c-toolbar__content pf-m-hidden"
                    hidden=""
                  >
                    <div
                      class="pf-c-toolbar__group"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="pf-c-modal-box__footer"
          >
            <button
              aria-disabled="true"
              class="pf-c-button pf-m-primary pf-m-disabled"
              data-ouia-component-id="primary-confirm-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              Add to group
            </button>
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="secondary-cancel-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              id="add-groups-cancel"
              type="button"
            >
              Cancel
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AddGroupMembers /> should render correctly empty 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-2"
          aria-labelledby="pf-modal-part-1"
          aria-modal="true"
          class="pf-c-modal-box pf-m-md"
          data-ouia-component-id="OUIA-Generated-Modal-medium-1"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-0"
          role="dialog"
        >
          <button
            aria-disabled="false"
            aria-label="Close"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-medium-1-ModalBoxCloseButton"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
          <header
            class="pf-c-modal-box__header"
          >
            <h1
              class="pf-c-modal-box__title"
              id="pf-modal-part-1"
            >
              
              <span
                class="pf-c-modal-box__title-text"
              >
                Add members
              </span>
            </h1>
          </header>
          <div
            class="pf-c-modal-box__body"
            id="pf-modal-part-2"
          >
            <div
              class="pf-l-stack pf-m-gutter"
            >
              <div
                class="pf-l-stack__item"
              >
                <div
                  class="pf-c-content"
                >
                  <p
                    class="pf-u-mt-0"
                    data-ouia-component-id="OUIA-Generated-Text-1"
                    data-ouia-component-type="PF4/Text"
                    data-ouia-safe="true"
                    data-pf-content="true"
                  >
                    These are all of the users in your Red Hat organization. 
                  </p>
                </div>
              </div>
              <div
                class="pf-l-stack__item"
              >
                <div
                  class="pf-c-toolbar  ins-c-primary-toolbar"
                  data-ouia-component-id="PrimaryToolbar"
                  data-ouia-component-type="PF4/Toolbar"
                  data-ouia-safe="true"
                  id="ins-primary-data-toolbar"
                >
                  <div
                    class="pf-c-toolbar__content"
                  >
                    <div
                      class="pf-c-toolbar__content-section"
                    >
                      <div
                        class="pf-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
                      >
                        <div
                          class="pf-c-toolbar__item"
                        >
                          <div
                            class="pf-c-dropdown ins-c-bulk-select"
                            data-ouia-component-id="BulkSelect"
                            data-ouia-component-type="PF4/Dropdown"
                            data-ouia-safe="true"
                          >
                            <div
                              class="pf-c-dropdown__toggle pf-m-split-button"
                            >
                              <label
                                class="pf-c-dropdown__toggle-check"
                                for="users-list-toggle-checkbox"
                              >
                                <input
                                  aria-invalid="false"
                                  aria-label="Select all"
                                  data-ouia-component-id="BulkSelect"
                                  data-ouia-component-type="PF4/DropdownToggleCheckbox"
                                  data-ouia-safe="true"
                                  id="users-list-toggle-checkbox"
                                  type="checkbox"
                                />
                                
                              </label>
                              <button
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="Select"
                                class="pf-c-dropdown__toggle-button"
                                data-ouia-component-id="BulkSelect"
                                data-ouia-component-type="PF4/DropdownToggle"
                                data-ouia-safe="true"
                                id="pf-dropdown-toggle-id-4"
                                type="button"
                              >
                                <span
                                  class=""
                                >
                                  <svg
                                    aria-hidden="true"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style="vertical-align: -0.125em;"
                                    viewBox="0 0 320 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="pf-c-toolbar__item ins-c-primary-toolbar__filter"
                        >
                          <div
                            class="pf-l-split ins-c-conditional-filter desktop"
                          >
                            <div
                              class="pf-l-split__item"
                            >
                              <div
                                class="pf-c-dropdown ins-c-conditional-filter__group"
                                data-ouia-component-id="ConditionalFilter"
                                data-ouia-component-type="PF4/Dropdown"
                                data-ouia-safe="true"
                              >
                                <button
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  aria-label="Conditional filter"
                                  class="pf-c-dropdown__toggle"
                                  data-ouia-component-id="ConditionalFilter"
                                  data-ouia-component-type="PF4/DropdownToggle"
                                  data-ouia-safe="true"
                                  id="pf-dropdown-toggle-id-5"
                                  type="button"
                                >
                                  <span
                                    class="pf-c-dropdown__toggle-text"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style="vertical-align: -0.125em;"
                                      viewBox="0 0 512 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                                      />
                                    </svg>
                                    <span
                                      class="ins-c-conditional-filter__value-selector"
                                    >
                                      Username
                                    </span>
                                  </span>
                                  <span
                                    class="pf-c-dropdown__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style="vertical-align: -0.125em;"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </div>
                            </div>
                            <div
                              class="pf-l-split__item pf-m-fill"
                            >
                              <input
                                aria-invalid="false"
                                aria-label="text input"
                                class="pf-c-form-control ins-c-conditional-filter "
                                data-ouia-component-id="ConditionalFilter"
                                data-ouia-component-type="PF4/TextInput"
                                data-ouia-safe="true"
                                id="filter-by-username"
                                placeholder="Filter by {key}"
                                type="text"
                                value=""
                                widget-type="InsightsInput"
                              />
                              <svg
                                aria-hidden="true"
                                class="ins-c-search-icon"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style="vertical-align: -0.125em;"
                                viewBox="0 0 512 512"
                                width="1em"
                              >
                                <path
                                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="pf-c-toolbar__item ins-c-primary-toolbar__pagination"
                      >
                        <div
                          class="pf-c-pagination pf-m-compact"
                          count="0"
                          data-ouia-component-id="CompactPagination"
                          data-ouia-component-type="PF4/Pagination"
                          data-ouia-safe="true"
                          id="options-menu-top-pagination"
                          limit="20"
                          style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
                        >
                          <div
                            class="pf-c-pagination__total-items"
                          >
                            <b>
                              0
                               - 
                              0
                            </b>
                             
                            of
                             
                            <b>
                              0
                            </b>
                             
                            
                          </div>
                          <div
                            class="pf-c-options-menu"
                            data-ouia-component-type="PF4/PaginationOptionsMenu"
                            data-ouia-safe="true"
                          >
                            <div
                              class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
                            >
                              <span
                                class="pf-c-options-menu__toggle-text"
                              >
                                <b>
                                  0
                                   - 
                                  0
                                </b>
                                 
                                of
                                 
                                <b>
                                  0
                                </b>
                                 
                                
                              </span>
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-label="Items per page"
                                class="  pf-c-options-menu__toggle-button"
                                data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
                                data-ouia-component-type="PF4/DropdownToggle"
                                data-ouia-safe="true"
                                id="options-menu-top-toggle"
                                type="button"
                              >
                                <span
                                  class="pf-c-options-menu__toggle-button-icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style="vertical-align: -0.125em;"
                                    viewBox="0 0 320 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </div>
                          <nav
                            aria-label="Pagination"
                            class="pf-c-pagination__nav"
                          >
                            <div
                              class="pf-c-pagination__nav-control"
                            >
                              <button
                                aria-disabled="true"
                                aria-label="Go to previous page"
                                class="pf-c-button pf-m-plain pf-m-disabled"
                                data-action="previous"
                                data-ouia-component-id="OUIA-Generated-Button-plain-2"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe="true"
                                disabled=""
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style="vertical-align: -0.125em;"
                                  viewBox="0 0 256 512"
                                  width="1em"
                                >
                                  <path
                                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                  />
                                </svg>
                              </button>
                            </div>
                            <div
                              class="pf-c-pagination__nav-control"
                            >
                              <button
                                aria-disabled="true"
                                aria-label="Go to next page"
                                class="pf-c-button pf-m-plain pf-m-disabled"
                                data-action="next"
                                data-ouia-component-id="OUIA-Generated-Button-plain-3"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe="true"
                                disabled=""
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style="vertical-align: -0.125em;"
                                  viewBox="0 0 256 512"
                                  width="1em"
                                >
                                  <path
                                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </nav>
                        </div>
                      </div>
                    </div>
                    <div
                      class="pf-c-toolbar__expandable-content"
                      id="ins-primary-data-toolbar-expandable-content-2"
                    >
                      <div
                        class="pf-c-toolbar__group"
                      />
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__content"
                  >
                    <div
                      class="pf-c-toolbar__content-section"
                    >
                      <div
                        class="pf-c-toolbar__item"
                      >
                        <span
                          class="ins-c-chip-filters"
                        >
                          <div
                            aria-labelledby="pf-random-id-0"
                            class="pf-c-chip-group pf-m-category"
                            data-ouia-component-type="PF4/ChipGroup"
                            data-ouia-safe="true"
                            role="group"
                          >
                            <div
                              class="pf-c-chip-group__main"
                            >
                              <span
                                class="pf-c-chip-group__label"
                                id="pf-random-id-0"
                              >
                                Status
                              </span>
                              <ul
                                aria-labelledby="pf-random-id-0"
                                class="pf-c-chip-group__list"
                                role="list"
                              >
                                <li
                                  class="pf-c-chip-group__list-item"
                                >
                                  <div
                                    class="pf-c-chip"
                                    data-ouia-component-id="OUIA-Generated-Chip-1"
                                    data-ouia-component-type="PF4/Chip"
                                    data-ouia-safe="true"
                                  >
                                    <span
                                      class="pf-c-chip__text"
                                      id="pf-random-id-1"
                                    >
                                      Active
                                    </span>
                                    <button
                                      aria-disabled="false"
                                      aria-label="close"
                                      aria-labelledby="remove_pf-random-id-1 pf-random-id-1"
                                      class="pf-c-button pf-m-plain"
                                      data-ouia-component-id="close"
                                      data-ouia-component-type="PF4/Button"
                                      data-ouia-safe="true"
                                      id="remove_pf-random-id-1"
                                      type="button"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: -0.125em;"
                                        viewBox="0 0 352 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                        />
                                      </svg>
                                    </button>
                                  </div>
                                </li>
                              </ul>
                            </div>
                          </div>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="ClearFilters"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Clear filters
                          </button>
                        </span>
                      </div>
                    </div>
                    <div
                      class="pf-c-toolbar__expandable-content"
                      id="ins-primary-data-toolbar-expandable-content-3"
                    >
                      <div
                        class="pf-c-toolbar__group"
                      />
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__content pf-m-hidden"
                    hidden=""
                  >
                    <div
                      class="pf-c-toolbar__group"
                    />
                  </div>
                </div>
                <table
                  aria-label="users table"
                  class="ins-c-table-empty-state pf-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
                  data-ouia-component-id="users-table"
                  data-ouia-component-type="PF4/Table"
                  data-ouia-safe="true"
                  role="grid"
                >
                  <thead
                    class=""
                  >
                    <tr
                      class=""
                      data-ouia-component-id="OUIA-Generated-TableRow-1"
                      data-ouia-component-type="PF4/TableRow"
                      data-ouia-safe="true"
                    >
                      <th
                        class="pf-m-nowrap"
                        data-key="0"
                        data-label="Org. Admin"
                        scope="col"
                      >
                        Org. Admin
                      </th>
                      <th
                        aria-sort="ascending"
                        class="pf-c-table__sort pf-m-selected"
                        data-key="1"
                        data-label="Username"
                        scope="col"
                      >
                        <button
                          class="pf-c-table__button"
                          type="button"
                        >
                          <div
                            class="pf-c-table__button-content"
                          >
                            <span
                              class="pf-c-table__text"
                            >
                              Username
                            </span>
                            <span
                              class="pf-c-table__sort-indicator"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style="vertical-align: -0.125em;"
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                                />
                              </svg>
                            </span>
                          </div>
                        </button>
                      </th>
                      <th
                        class=""
                        data-key="2"
                        data-label="Email"
                        scope="col"
                      >
                        Email
                      </th>
                      <th
                        class="pf-m-nowrap"
                        data-key="3"
                        data-label="First name"
                        scope="col"
                      >
                        First name
                      </th>
                      <th
                        class="pf-m-nowrap"
                        data-key="4"
                        data-label="Last name"
                        scope="col"
                      >
                        Last name
                      </th>
                      <th
                        class="pf-m-nowrap"
                        data-key="5"
                        data-label="Status"
                        scope="col"
                      >
                        Status
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class=""
                    role="rowgroup"
                  >
                    <tr
                      class="rbac__user-row ins-m-inactive"
                      data-ouia-component-id="OUIA-Generated-TableRow-2"
                      data-ouia-component-type="PF4/TableRow"
                      data-ouia-safe="true"
                    >
                      <td
                        class=""
                        colspan="6"
                        data-key="0"
                        data-label="Org. Admin"
                      >
                        <div
                          class="pf-c-empty-state pf-m-sm"
                        >
                          <div
                            class="pf-c-empty-state__content"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-c-empty-state__icon"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                              />
                            </svg>
                            <h4
                              class="pf-c-title pf-m-lg"
                              data-ouia-component-id="OUIA-Generated-Title-1"
                              data-ouia-component-type="PF4/Title"
                              data-ouia-safe="true"
                            >
                              No matching {items} found
                            </h4>
                            <div
                              class="pf-c-empty-state__body pf-u-mb-md"
                            >
                              This filter criteria matches no {items}.
                               
                              <br />
                              Try changing your filter settings.
                               
                              <br />
                            </div>
                            <div
                              class="pf-c-empty-state__primary"
                            >
                              <button
                                aria-disabled="false"
                                class="pf-c-button pf-m-link"
                                data-ouia-component-id="clear-filters-button"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe="true"
                                type="button"
                              >
                                Clear all filters
                              </button>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <div
                  class="pf-c-toolbar ins-c-table__toolbar"
                  data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-1"
                  data-ouia-component-type="RHI/TableToolbar"
                  data-ouia-safe="true"
                  id="pf-random-id-2"
                >
                  <div
                    class="pf-c-pagination pf-m-bottom"
                    count="0"
                    data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
                    data-ouia-component-type="PF4/Pagination"
                    data-ouia-safe="true"
                    id="options-menu-bottom-pagination"
                    limit="20"
                    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
                  >
                    <div
                      class="pf-c-options-menu pf-m-top"
                      data-ouia-component-type="PF4/PaginationOptionsMenu"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
                      >
                        <span
                          class="pf-c-options-menu__toggle-text"
                        >
                          <b>
                            0
                             - 
                            0
                          </b>
                           
                          of
                           
                          <b>
                            0
                          </b>
                           
                          
                        </span>
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-label="Items per page"
                          class="  pf-c-options-menu__toggle-button"
                          data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
                          data-ouia-component-type="PF4/DropdownToggle"
                          data-ouia-safe="true"
                          id="options-menu-bottom-toggle"
                          type="button"
                        >
                          <span
                            class="pf-c-options-menu__toggle-button-icon"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 320 512"
                              width="1em"
                            >
                              <path
                                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                    <nav
                      aria-label="Pagination"
                      class="pf-c-pagination__nav"
                    >
                      <div
                        class="pf-c-pagination__nav-control pf-m-first"
                      >
                        <button
                          aria-disabled="true"
                          aria-label="Go to first page"
                          class="pf-c-button pf-m-plain pf-m-disabled"
                          data-action="first"
                          data-ouia-component-id="OUIA-Generated-Button-plain-5"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 448 512"
                            width="1em"
                          >
                            <path
                              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="pf-c-pagination__nav-control"
                      >
                        <button
                          aria-disabled="true"
                          aria-label="Go to previous page"
                          class="pf-c-button pf-m-plain pf-m-disabled"
                          data-action="previous"
                          data-ouia-component-id="OUIA-Generated-Button-plain-6"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="pf-c-pagination__nav-page-select"
                      >
                        <input
                          aria-label="Current page"
                          class="pf-c-form-control"
                          disabled=""
                          max="0"
                          min="1"
                          type="number"
                          value="0"
                        />
                        <span
                          aria-hidden="true"
                        >
                          of
                           
                          0
                        </span>
                      </div>
                      <div
                        class="pf-c-pagination__nav-control"
                      >
                        <button
                          aria-disabled="true"
                          aria-label="Go to next page"
                          class="pf-c-button pf-m-plain pf-m-disabled"
                          data-action="next"
                          data-ouia-component-id="OUIA-Generated-Button-plain-7"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="pf-c-pagination__nav-control pf-m-last"
                      >
                        <button
                          aria-disabled="true"
                          aria-label="Go to last page"
                          class="pf-c-button pf-m-plain pf-m-disabled"
                          data-action="last"
                          data-ouia-component-id="OUIA-Generated-Button-plain-8"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 448 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                            />
                          </svg>
                        </button>
                      </div>
                    </nav>
                  </div>
                  <div
                    class="pf-c-toolbar__content pf-m-hidden"
                    hidden=""
                  >
                    <div
                      class="pf-c-toolbar__group"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="pf-c-modal-box__footer"
          >
            <button
              aria-disabled="true"
              class="pf-c-button pf-m-primary pf-m-disabled"
              data-ouia-component-id="primary-confirm-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              Add to group
            </button>
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="secondary-cancel-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              id="add-groups-cancel"
              type="button"
            >
              Cancel
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;
